  (RBL-3693)
* The rMake server and rMake node logs are available for viewing from the rAPA
  logs plugin. (RBL-3780)
* There is now an RPA plug-in to configure targets. (RBL-3950)
* The confirmation message for unpublishing a release has been updated to
  inform users that content is not removed from rUS.  (RBL-2917)

Bug Fixes
---------------------
* The default search settings in the web interface was not being set
  properly, causing no radio buttons to be selected in the interface.
  This has been corrected. (RBL-3002)
* Fixed a bug preventing admin users from being able to browse the
  repository for private products they are not members of. (RBL-3108)
* The edit external products page now retrieves the correct label
  information in all cases. (RBL-3179)
* The help text for Group Builder and package creator has been moved to the top
  of the page. (RBL-3083, RBL-3182)
* A tool for guiding users through the process of creating an appliance, named
  Appliance Creator, has been added (RDST-407)
* The Edit Version page now allows you to rebase your platform definition.
  (RBL-2383)
* The Appliance Creator Wizard has been modified to allow the addition of
  arbitrary packages to your appliance definition. (RDST-533)
* Fixed a bug where the Edit Version page referred to "Image Sets" when dealing
  with an "Image Set". (RBL-3281)
* The namespace field has been removed from the edit and create product
  version pages.  The product versions namespace is obtained through the
  product now. (RBL-3296)
* Moved the choice of appliance or component when creating a new product to the
  top of the page under title. (RBL-3298)
* Changed the "No images defined." message on the create/edit product version
  pages to use a bold font. (RBL-3319)
* When creating or editing a product version, users will now be prompted with
  a modal warning if they do not define any builds. (RBL-3301)
* The "Update Appliance Platform" checkbox is now the proper size. (RBL-3336)