@@ -611,13 +611,11 @@ button#createAccountSubmit {
 
 div#footer {
     color: #000;
-    width: auto;
-    min-width: 915px;
-    padding: 6px 20px 0px 20px;
+    width: 99%;
+    min-width: 955px;
+    padding: 0 6px;
     font-family: verdana, sans-serif;
     font-size: 11px;
-    float: left;
-    clear: right;
 }
 
 div#footer a {
